--- a/prime/src/pages/Home/home.css
+++ b/prime/src/pages/Home/home.css
@@ -3,7 +3,12 @@
     margin: 14px auto;
 
 }
-
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 14px;
+}
 .lista-filmes article{
     width: 100%;
     background-color: #fff;
