update project with new style

--- a/pizzaria/frontend/src/app/dashboard/components/button/styles.module.scss
+++ b/pizzaria/frontend/src/app/dashboard/components/button/styles.module.scss
@@ -1,9 +1,14 @@
-.button{
-    height: 40px;
-    border-radius: 8px;
-    border: 0;
-    background-color: var(--green-900);
-    font-weight: bold;
-    font-size: 16px;
-    color: var(--white);
+.button {
+  height: 40px;
+  border-radius: 8px;
+  border: 0;
+  background-color: var(--outer-space);
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--seasalt);
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: var(--onyx);
+  }
 }
