--- a/pizzaria/frontend/src/app/dashboard/category/styles.module.scss
+++ b/pizzaria/frontend/src/app/dashboard/category/styles.module.scss
@@ -1,29 +1,28 @@
-.container{
-    max-width: 720px;
-    margin: 20px auto;
-    padding:  0 16px;
+.container {
+  max-width: 720px;
+  margin: 20px auto;
+  padding: 0 16px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    h1{
-        color: var(--white);
-    }
+  h1 {
+    color: var(--eerie-black);
+  }
 }
 
-
-.form{
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-    margin: 16px 0;
+.form {
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+  margin: 16px 0;
 }
 
-.input{
-    height: 40px;
-    border: 0;
-    background-color: var(--dar-900);
-    padding: 0 16px;
-    color: var(--white);
-    border: 1px solid  var(--gray-100);
+.input {
+  height: 40px;
+  border: 1px solid var(--platinum);
+  background-color: var(--seasalt);
+  padding: 0 16px;
+  color: var(--eerie-black);
+  border-radius: 8px;
 }
