--- a/pizzaria/frontend/src/app/dashboard/components/orders/styles.module.scss
+++ b/pizzaria/frontend/src/app/dashboard/components/orders/styles.module.scss
@@ -1,58 +1,59 @@
-.container{
-    max-width: 720px;
-    margin:20px auto;
-    padding: 0 16px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+.container {
+  max-width: 720px;
+  margin: 20px auto;
+  padding: 0 16px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 
-    h1{
-        color: var(--white);
-    }
+  h1 {
+    color: var(--eerie-black);
+  }
 }
 
+.containerHeader {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+  margin-top: 24px;
+  gap: 14px;
 
-.containerHeader{
-    display: flex;
-    align-items: center;
-    margin-bottom: 16px;
-    margin-top: 24px;
-    gap:14px;
-
-    button{
-        background: transparent;
-        border: 0;
-    }
+  button {
+    background: transparent;
+    border: 0;
+  }
 }
 
-.listOrders{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+.listOrders {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.orderItem{
-    display: flex;
-    background-color: var(--dark-900);
-    align-items: center;
-    border:0;
-    font-size: 18px;
-    border-radius: 8px;
-    color: var(--white);
-    transition: filter 0.5s;
-    &:hover{
-        filter: brightness(1.4);
-    }
+.orderItem {
+  display: flex;
+  background-color: var(--antiflash-white);
+  align-items: center;
+  border: 1px solid var(--platinum);
+  font-size: 18px;
+  border-radius: 8px;
+  color: var(--eerie-black);
+  transition: all 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  &:hover {
+    background-color: var(--platinum);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
-.tag{
-    width: 9px;
-    height: 60px;
-    border-radius: 6px 0 0 6px;
-    background-color: var(--green-900);
-    margin-right: 16px;
+.tag {
+  width: 9px;
+  height: 60px;
+  border-radius: 6px 0 0 6px;
+  background-color: var(--outer-space);
+  margin-right: 16px;
 }
 
-.emptyItem{
-    color: var(--gray-100);
+.emptyItem {
+  color: var(--slate-gray);
 }
