--- a/pizzaria/frontend/src/app/dashboard/product/components/form/styles.module.scss
+++ b/pizzaria/frontend/src/app/dashboard/product/components/form/styles.module.scss
@@ -1,87 +1,85 @@
-.container{
-    max-width: 720px;
-    margin: 20px auto;
-    padding: 0 16px;
-    display: flex;
-    flex-direction: column;
+.container {
+  max-width: 720px;
+  margin: 20px auto;
+  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
 
-    h1{
-        color: var(--white);
-    }
-    
+  h1 {
+    color: var(--eerie-black);
+  }
 }
 
-.form{
-    display: flex;
-    flex-direction: column;
-    margin: 16px 0;
-    gap: 16px;
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: 16px 0;
+  gap: 16px;
 
-    select{
-        width: 100%;
-        height: 40px;
-        border-radius: 8px;
-        background-color: var(--dark-900);
-        color: var(--white);
-        padding: 0 8px;
-        border: 1px solid var(--gray-100);
-    }
-
-    textarea{
-        width: 100%;
-        min-height: 120px;
-        resize: none;
-        padding: 8px;
-        color: var(--white);
-
-    }
-}
-
-.labelImage{
+  select {
     width: 100%;
-    height: 280px;
-    position: relative;
-    background-color: var(--dark-900);
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    flex-direction: column;
-    margin-bottom: 16px;
-    border: 1px solid var(--gray-100);
-
-    input{
-        display: none;
-    }
-    
-    span{
-        z-index: 99;
-        opacity: 0.8;
-        transition: all 0.6s;
-    
-        &:hover{
-            opacity: 1;
-            transform: scale(1.1);
-        }
-    }
-}
-
-.preview{
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    object-fit: cover;
-}
-
-
-.input{
-    border: 0;
     height: 40px;
-    background-color: var(--dark-900);
-    border: 1px solid var(--gray-100);
     border-radius: 8px;
+    background-color: var(--seasalt);
+    color: var(--eerie-black);
     padding: 0 8px;
-    color: var(--white);
+    border: 1px solid var(--platinum);
+  }
 
+  textarea {
+    width: 100%;
+    min-height: 120px;
+    resize: none;
+    padding: 8px;
+    color: var(--eerie-black);
+    background-color: var(--seasalt);
+    border: 1px solid var(--platinum);
+    border-radius: 8px;
+  }
+}
+
+.labelImage {
+  width: 100%;
+  height: 280px;
+  position: relative;
+  background-color: var(--antiflash-white);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  flex-direction: column;
+  margin-bottom: 16px;
+  border: 1px solid var(--platinum);
+
+  input {
+    display: none;
+  }
+
+  span {
+    z-index: 99;
+    opacity: 0.8;
+    transition: all 0.6s;
+
+    &:hover {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+  }
+}
+
+.preview {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.input {
+  border: 1px solid var(--platinum);
+  height: 40px;
+  background-color: var(--seasalt);
+  border-radius: 8px;
+  padding: 0 8px;
+  color: var(--eerie-black);
 }
