--- a/pizzaria/frontend/src/app/globals.scss
+++ b/pizzaria/frontend/src/app/globals.scss
@@ -1,47 +1,61 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 0;
 }
 
-:root{
-    --white: #fff;
-    --black: #000;
+:root {
+  --seasalt: #f8f9faff;
+  --antiflash-white: #e9ecefff;
+  --platinum: #dee2e6ff;
+  --french-gray: #ced4daff;
+  --french-gray-2: #adb5bdff;
+  --slate-gray: #6c757dff;
+  --outer-space: #495057ff;
+  --onyx: #343a40ff;
+  --eerie-black: #212529ff;
 
-    --dark-900: #101026;
-    --dark-700: #1d1d2e;
+  /* Mapeamento para compatibilidade */
+  --white: var(--seasalt);
+  --black: var(--eerie-black);
 
-    --gray-100: #8a8a8a;
-    --green-900: #3fffa3;
-    --red-900: #ff3f4b
+  --dark-900: var(--antiflash-white);
+  --dark-700: var(--seasalt);
+
+  --gray-100: var(--french-gray);
+  --green-900: var(--outer-space);
+  --red-900: var(--onyx);
 }
 
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 
-a{
-    color: inherit;
-    text-decoration: none;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-body{
-    background: var(--dark-700);
+body {
+  background: var(--seasalt);
 }
 
-body,input,textarea,select,button{
-    font:400, 1rem sans-serif; // 1rem = 16px
+body,
+input,
+textarea,
+select,
+button {
+  font: 400, 1rem sans-serif; // 1rem = 16px
 }
 
-@media (max-width:720px){
-    html{
-        font-size: 87.5%; // 14px
-    }
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%; // 14px
+  }
 }
-@media (max-width:1080px){
-    html{
-        font-size: 93.75%; // 15px
-    }
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%; // 15px
+  }
 }
-
