--- a/pizzaria/frontend/src/app/page.module.scss
+++ b/pizzaria/frontend/src/app/page.module.scss
@@ -1,11 +1,11 @@
-.containerCenter{
+.containerCenter {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.login{
+.login {
   margin-top: 24px;
   display: flex;
   flex-direction: column;
@@ -14,59 +14,64 @@
   gap: 16px;
   width: 600px;
 
-form{
-  color: var(--white);
-  padding-bottom: 16px;
-  font-size: 18px;
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  gap: 16px;
+  form {
+    color: var(--eerie-black);
+    padding-bottom: 16px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap: 16px;
+  }
+  form button {
+    height: 40px;
+    font-size: 16px;
+    background-color: var(--outer-space);
+    border: 0;
+    border-radius: 8px;
+    color: var(--seasalt);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+  }
+
+  form button:hover {
+    transform: scale(1.05);
+    background-color: var(--onyx);
+  }
+
+  h1 {
+    color: var(--eerie-black);
+  }
 }
-form button{
+.logoImg {
+  width: 200px;
+  height: 200px;
+  padding: 16px;
+}
+
+.input {
   height: 40px;
-  font-size: 16px;
-  background-color: var(--red-900);
-  border: 0;
-  border-radius: 8px;
-  color: var(--white);
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.5s;
-}
-
-form button:hover{
-  transform: scale(1.05);
-}
-
-h1{
-  color: var(--white);
-}
-}
-
-.input{
-  height: 40px;
-  border: 1px solid var(--gray-100);
+  border: 1px solid var(--platinum);
   padding: 0 16px;
   border-radius: 8px;
-  background-color: var(--dark-900);
-  color: var(--white);
+  background-color: var(--seasalt);
+  color: var(--eerie-black);
   font-size: 16px;
 }
-.input::placeholder{
-  color: rgba(255,255,255,0.7)
+.input::placeholder {
+  color: var(--slate-gray);
 }
 
-.text{
-  color: var(--white);
+.text {
+  color: var(--eerie-black);
   text-decoration: none;
 }
 
-
-@media (max-width: 620px){
-  .login{
+@media (max-width: 620px) {
+  .login {
     width: 90%;
   }
 }
